add redux-ts and router-redux-ts template

--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
     "react-cmder": "./index.js"
   },
   "dependencies": {
-    "@types/react-redux": "^7.0.9",
-    "@types/react-router-dom": "^4.3.3",
     "chalk": "^2.4.2",
     "create-react-app": "^3.0.1",
     "cross-spawn": "^6.0.5",
     "fs-extra": "^8.0.1",
-    "inquirer": "^6.3.1",
-    "node-sass": "^4.12.0",
-    "react-redux": "^7.0.3",
-    "react-router-dom": "^5.0.0",
-    "redux": "^4.0.1",
-    "redux-saga": "^1.0.2",
-    "redux-thunk": "^2.3.0"
+    "inquirer": "^6.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
     "@cr4zyc4t/eslint-config-common": "^1.0.4",
+    "@typescript-eslint/eslint-plugin": "1.x",
+    "@typescript-eslint/parser": "1.x",
+    "babel-eslint": "10.x",
     "eslint": "^5.16.0",
+    "eslint-config-react-app": "^4.0.1",
+    "eslint-plugin-flowtype": "2.x",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0"
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react-hooks": "^1.6.0",
+    "typescript": "~3.4.5"
   }
 }
