--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublishOnly": "node ./lib/cleanup.js && node ./lib/ts2js.js"
   },
   "author": "ToanVQ <hunter9xbn@gmail.com>",
   "license": "MIT",
@@ -12,7 +12,6 @@
     "react-cmder": "./index.js"
   },
   "dependencies": {
-    "chalk": "^2.4.2",
     "create-react-app": "^3.0.1",
     "cross-spawn": "^6.0.5",
     "fs-extra": "^8.0.1",
@@ -20,6 +19,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
+    "@babel/preset-typescript": "^7.3.3",
     "@cr4zyc4t/eslint-config-common": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "1.x",
     "@typescript-eslint/parser": "1.x",
@@ -31,6 +31,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-react-hooks": "^1.6.0",
+    "react": "^16.8.6",
     "typescript": "~3.4.5"
   }
 }
